--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
-<html lang="´pt-br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Turístico</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <header>
+            <h2 class="headline">Sua próxima viagem:</h2>
+            <h1>Conheça Busan</h1>
+        </header>
+        <section id="description">
+            <img src="assets/Image_01.png" alt="">
+            <p class="subtitle">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>            
+            <div class="divider"></div>
+        </section>
+        <section id="title-list">
+            <h2 class="headline">Para os amantes de história</h2>
+            <h2>Descubra 3 destinos imperdíveis em Busan</h2>
+            <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos. Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
+        </section>
+        <ol class="custom-list">
+            <li>
+                <img src="assets/Image_02.png" alt="" class="image-list">
+                <div class="text-list">
+                    <h3>Templo Haedong Yonggungsa</h3>
+                    <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.</p>
+                    <p><span class="label">Bom para:</span></p>
+                    <ul>
+                        <li id="l1">História</li>
+                    </ul>
+                </div>
+                <div class="divider"></div>
+            </li>
+            <li>
+                <img src="assets/Image_03.png" alt="" class="image-list">
+                <div class="text-list">
+                    <h3>Templo Beomeo-sa</h3>
+                    <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
+                    <p><span class="label">Bom para:</span></p>
+                    <ul>
+                        <li id="l2">História</li>
+                    </ul>
+                </div>
+                <div class="divider"></div>
+            </li>
+            <li>
+                <img src="assets/Image_04.png" alt="" class="image-list">
+                <div class="text-list">
+                    <h3>Parque Yongdusan</h3>
+                    <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
+                    <p><span class="label">Bom para:</span></p>
+                    <ul>
+                        <li id="l3">Casais</li>
+                        <li id="l4">Famílias</li>
+                        <li id="l5">Orçamento</li>
+                    </ul>
+                </div>
+                <div class="divider"></div>
+            </li>
+        </ol>
+        <p id="final-text">As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
+    </main>
+    <footer>
+        Feito com
+        <img src="assets/Vector.svg" alt="heart">
+        pela Rocketseat
+    </footer>
 </body>
 </html>
